[package]
name = "simulation"
version = "1.0.0"
authors = ["S. Suprun <hello@syoma.website>"]
repository = "https://github.com/BehindLoader/simulation"
publish = false
description = "Description"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.0", features = ["derive", "env"]}
lazy_static = "1.4.0"
rand = "0.8.5"
sdl2 = "0.35.2"
